[package]
name = "conrod_floatwin"
version = "0.0.1"
authors = ["Alvin Wong <alvinhochun@gmail.com>"]
edition = "2018"

description = "A virtual windowing library for Conrod UI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alvinhochun/conrod_floatwin"
readme = "README.md"
categories = ["gui", "graphics"]

exclude = ["/images/"]

[dependencies]
conrod_core = ">=0.69"

[dev-dependencies]
conrod_core = "0.70"
conrod_glium = "0.70"
conrod_winit = "0.70"
glium = "0.27"
winit = "0.22"

[patch.crates-io]
conrod_core = { version = "0.70", git = "https://github.com/alvinhochun/conrod.git", branch = "update-glium-winit" }
conrod_glium = { version = "0.70", git = "https://github.com/alvinhochun/conrod.git", branch = "update-glium-winit" }
conrod_winit = { version = "0.70", git = "https://github.com/alvinhochun/conrod.git", branch = "update-glium-winit" }
