[package]
name = "conrod_floatwin"
version = "0.0.2"
authors = ["Alvin Wong <alvinhochun@gmail.com>"]
edition = "2018"

description = "A virtual windowing library for Conrod UI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alvinhochun/conrod_floatwin"
readme = "README.md"
categories = ["gui", "graphics"]

exclude = ["/assets/", "/images/"]

[dependencies]
conrod_core = ">=0.69"

[dev-dependencies]
conrod_core = "0.70"
conrod_glium = "0.70"
conrod_winit = "0.70"
glium = "0.24"
winit = "0.19"
